--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,4 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2709
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;\f1\fnil\fcharset0 Monaco;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;\red255\green255\blue255;\red255\green255\blue255;
-\red0\green0\blue0;\red255\green255\blue255;}
-{\*\expandedcolortbl;;\cssrgb\c0\c1\c1;\cssrgb\c100000\c100000\c99971\c0;\cssrgb\c100000\c100000\c99895\c50196;
-\cssrgb\c0\c0\c0;\cssrgb\c100000\c100000\c99985\c50196;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww11520\viewh8400\viewkind0
-\deftab720
-\pard\pardeftab720\partightenfactor0
-
-\f0\fs28 \cf2 \cb3 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec4 streamlit==0.89.0\
-matplotlib==3.4.3\
-pandas==1.3.0\
+streamlit==0.89.0
+matplotlib==3.4.3
+pandas==1.3.0
 numpy>=1.21.0
-\f1 \cf2 \cb5 \strokec6 \
-}
